# JCA

./: .dockerignore  .env.example  .gitignore  AUDIT_ROUND3.md  CLAUDE_PLAN.md  CLAUDE_SPEC.md  Dockerfile  JCA-SOW.docx  README.md  REFERENCE.md  SKILL.md  TODO.md  alembic.ini  conversion_progress_detailed.csv  docker-compose.yml  generate_report.py  index.html  pyproject.toml  tailwind.config.js  test.db
.claude/: CLAUDE.md
.claude/rules/: api-design.md  code-style.md  deployment.md  security.md  testing.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 7860d8a96b01_baseline.py
app/: config.py  dependencies.py  main.py
app/auth/: firebase.py  middleware.py
app/gcp/: calendar_sync.py  cloud_tasks.py  storage.py
app/models/: __init__.py  assessment.py  base.py  beit_din.py  curriculum.py  event.py  progress.py  questionnaire.py  resource.py  user.py
app/routers/: admin.py  assessments.py  auth_routes.py  beit_din.py  curriculum.py  dashboard.py  events.py  export.py  faq.py  pages.py  questionnaires.py  rabbi.py  resources.py  teacher.py  users.py  video_progress.py
app/schemas/: assessment.py  beit_din.py  curriculum.py  dashboard.py  event.py  progress.py  questionnaire.py  resource.py  user.py
app/services/: assessment_service.py  beit_din_service.py  cloud_tasks_service.py  curriculum_service.py  email_service.py  event_service.py  progress_service.py  resource_service.py
deploy/: gce-startup.sh
scripts/: seed_curriculum.py  seed_mentor.py  start.sh
src/: App.tsx  index.css
tests/: conftest.py  factories.py
(+35 files in other folders)
